<resources>
    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">

    </string>
    <string name="ciudad">Ciudad</string>
    <string name="region">Region</string>
    <string name="temperatura">Temperatura</string>
    <string name="viento">Viento</string>
    <string name="amanecer">Amanecer</string>
</resources>